# azure-devops-security-worst-pratices

./: .env.example  .gitignore  README.md  azure-pipelines-1.yml  azure-pipelines-coverage.yml  azure-pipelines-high-severity-only.yml  azure-pipelines-minimal.yml  azure-pipelines.yml  coverage.xml  pyproject.toml  requirements-vuln-demo.txt  requirements.txt
.docker/azp-agent/: Dockerfile  start.sh
.github/codeql/: codeql-config-high-only.yml
config/: settings.yaml
output/: 2.101.Job.ebece6.python.builtin.sarif  ghas_results.json
specs/001-ghazdo-vuln-demo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ghazdo-vuln-demo/checklists/: demo-quality.md  requirements.md
specs/001-ghazdo-vuln-demo/contracts/: flask-endpoints.md
src/: app.py  config.py  database.py
src/integrations/: s3_backup.py
src/vulnerabilities/: command_injection.py  insecure_deserialization.py  path_traversal.py  sql_injection.py  ssrf.py  xss.py
tests/: test_vulnerabilities.py
