[project]
name = "ghazdo-vuln-demo"
version = "0.1.0"
description = "GHAzDO Security Scanning Demo — intentionally vulnerable Flask app"
requires-python = ">=3.11"
dependencies = [
    "flask",
    # Pin requests and its transitive deps above all known-vulnerable ranges.
    "requests>=2.32.2",    # CVE-2023-32681 patched in 2.32.2 (proxy credential leak on redirect)
    "urllib3>=2.6.3",      # CVE-2024-37891/37895 patched in 2.6.3 (decompression-bomb bypass)
    "certifi>=2023.7.22",  # CVE-2023-37920  patched in 2023.7.22 (e-Tugra root cert removal)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
