[project]
name = "ghazdo-vuln-demo"
version = "0.1.0"
description = "GHAzDO Security Scanning Demo — intentionally vulnerable Flask app"
requires-python = ">=3.11"
dependencies = [
    "flask",
    # ⚠️ DEMO WORST PRACTICE: pinned to known-vulnerable versions to trigger Dependency Scanning alerts.
    # Dep #1 — requests 2.28.0: CVE-2023-32681 (HTTP proxy auth header forwarded to non-proxy host)
    "requests==2.28.0",
    # Dep #2 — urllib3 1.26.14: CVE-2023-43804 (Cookie header leak), CVE-2023-45803 (redirect info leak)
    "urllib3==1.26.14",
    # Dep #3 — PyYAML 5.3.1: CVE-2020-14343 (arbitrary code execution via yaml.load() without Loader)
    # Used in src/config.py to load settings.yaml; intentionally calls yaml.load() without safe Loader.
    "pyyaml==5.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
